# fastapi-postgres

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  local.postman_collection.json  pyproject.toml
fastapi_crud_postgres/: main.py
tests/: test_fastapi_crud_postgres.py
