[tool.poetry]
name = "fastapi-crud-postgres"
version = "0.1.0"
description = ""
authors = ["Dmytro Zadorozhnyi <dmitriyzadorozniy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"
databases = {extras = ["postgresql"], version = "^0.4.3"}
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fastapi_crud_postgres.main:start"
